benchmarks/c/pregen/ragel/submatch_01__http_simple.c
#line 1 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
#include "ragel/common.c"

const char *delim = "\n\n";


#line 74 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"



#line 9 "gen/ragel/submatch_01__http_simple.c"
static const int uri_start = 47;
static const int uri_first_final = 47;
static const int uri_error = 0;

static const int uri_en_main = 47;


#line 76 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"


static void lex(Input *in, Output *out)
{
	char *p = in->p;
	char *pe = in->pe;
	const char *h1, *h2,
	*s1, *v1, *v3, *m1, *rp1, *rt1,
	*s2, *v2, *v4, *m2, *rp2, *rt2;
	int cs;
	

#line 27 "gen/ragel/submatch_01__http_simple.c"
	{
		cs = (int)uri_start;
	}
	
#line 87 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"


#line 32 "gen/ragel/submatch_01__http_simple.c"
{
		switch ( cs ) {
			case 47:
			goto st_case_47;
			case 0:
			goto st_case_0;
			case 1:
			goto st_case_1;
			case 2:
			goto st_case_2;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
			case 9:
			goto st_case_9;
			case 10:
			goto st_case_10;
			case 11:
			goto st_case_11;
			case 12:
			goto st_case_12;
			case 13:
			goto st_case_13;
			case 14:
			goto st_case_14;
			case 15:
			goto st_case_15;
			case 16:
			goto st_case_16;
			case 17:
			goto st_case_17;
			case 18:
			goto st_case_18;
			case 19:
			goto st_case_19;
			case 20:
			goto st_case_20;
			case 21:
			goto st_case_21;
			case 22:
			goto st_case_22;
			case 23:
			goto st_case_23;
			case 24:
			goto st_case_24;
			case 25:
			goto st_case_25;
			case 26:
			goto st_case_26;
			case 27:
			goto st_case_27;
			case 28:
			goto st_case_28;
			case 29:
			goto st_case_29;
			case 30:
			goto st_case_30;
			case 31:
			goto st_case_31;
			case 32:
			goto st_case_32;
			case 33:
			goto st_case_33;
			case 34:
			goto st_case_34;
			case 35:
			goto st_case_35;
			case 36:
			goto st_case_36;
			case 37:
			goto st_case_37;
			case 38:
			goto st_case_38;
			case 39:
			goto st_case_39;
			case 40:
			goto st_case_40;
			case 41:
			goto st_case_41;
			case 42:
			goto st_case_42;
			case 43:
			goto st_case_43;
			case 44:
			goto st_case_44;
			case 45:
			goto st_case_45;
			case 46:
			goto st_case_46;
		}
		_ctr24:
			{
#line 53 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			
			if (s2) {
				OUT("version: ", v1, v2);
				OUT("status: ", s1, s2);
				OUT("reason: ", rp1, rp2);
			}
			if (m2) {
				OUT("method: ", m1, m2);
				OUT("request: ", rt1, rt2);
				OUT("version: ", v3, v4);
			}
		}
		
#line 147 "gen/ragel/submatch_01__http_simple.c"

			{
#line 71 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			outc(out, '\n'); }
		
#line 152 "gen/ragel/submatch_01__http_simple.c"

		goto _st47;
		_ctr39:
			{
#line 71 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			outc(out, '\n'); }
		
#line 159 "gen/ragel/submatch_01__http_simple.c"

		goto _st47;
		_st47:
		p+= 1;
		st_case_47:
		if ( p == pe )
			goto _out47;
		switch( ( (*( p))) ) {
			case 33: {
				goto _ctr72;
			}
			case 72: {
				goto _ctr73;
			}
			case 124: {
				goto _ctr72;
			}
			case 126: {
				goto _ctr72;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _ctr72;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _ctr72;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _ctr72;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _ctr72;
				}
			} else {
				goto _ctr72;
			}
		} else {
			goto _ctr72;
		}
		goto _st0;
		_st0:
		st_case_0:
		goto _out0;
		_ctr72:
			{
#line 49 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			
			h1 = h2 =
			s1 = v1 = v3 = m1 = rp1 = rt1 =
			s2 = v2 = v4 = m2 = rp2 = rt2 = NULL;
		}
		
#line 216 "gen/ragel/submatch_01__http_simple.c"

			{
#line 37 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			m1 = p; }
		
#line 221 "gen/ragel/submatch_01__http_simple.c"

		goto _st1;
		_st1:
		p+= 1;
		st_case_1:
		if ( p == pe )
			goto _out1;
		switch( ( (*( p))) ) {
			case 32: {
				goto _ctr2;
			}
			case 33: {
				goto _st1;
			}
			case 124: {
				goto _st1;
			}
			case 126: {
				goto _st1;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _st1;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _st1;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _st1;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st1;
				}
			} else {
				goto _st1;
			}
		} else {
			goto _st1;
		}
		goto _st0;
		_ctr2:
			{
#line 37 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			m2 = p; }
		
#line 271 "gen/ragel/submatch_01__http_simple.c"

		goto _st2;
		_st2:
		p+= 1;
		st_case_2:
		if ( p == pe )
			goto _out2;
		switch( ( (*( p))) ) {
			case 33: {
				goto _ctr4;
			}
			case 43: {
				goto _ctr5;
			}
			case 47: {
				goto _ctr6;
			}
			case 61: {
				goto _ctr4;
			}
			case 91: {
				goto _ctr7;
			}
			case 93: {
				goto _ctr7;
			}
			case 95: {
				goto _ctr4;
			}
			case 126: {
				goto _ctr4;
			}
		}
		if ( ( (*( p))) < 58 ) {
			if ( ( (*( p))) > 44 ) {
				{
					goto _ctr5;
				}
			} else if ( ( (*( p))) >= 36 ) {
				goto _ctr4;
			}
		} else if ( ( (*( p))) > 59 ) {
			if ( ( (*( p))) > 90 ) {
				if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _ctr5;
				}
			} else if ( ( (*( p))) >= 65 ) {
				goto _ctr5;
			}
		} else {
			goto _ctr4;
		}
		goto _st0;
		_ctr4:
			{
#line 38 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rt1 = p; }
		
#line 329 "gen/ragel/submatch_01__http_simple.c"

		goto _st3;
		_st3:
		p+= 1;
		st_case_3:
		if ( p == pe )
			goto _out3;
		switch( ( (*( p))) ) {
			case 32: {
				goto _ctr9;
			}
			case 33: {
				goto _st3;
			}
			case 61: {
				goto _st3;
			}
			case 64: {
				goto _st22;
			}
			case 91: {
				goto _st23;
			}
			case 93: {
				goto _st23;
			}
			case 95: {
				goto _st3;
			}
			case 126: {
				goto _st3;
			}
		}
		if ( ( (*( p))) < 48 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 46 ) {
				goto _st3;
			}
		} else if ( ( (*( p))) > 59 ) {
			if ( ( (*( p))) > 90 ) {
				if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st3;
				}
			} else if ( ( (*( p))) >= 65 ) {
				goto _st3;
			}
		} else {
			goto _st3;
		}
		goto _st0;
		_ctr9:
			{
#line 38 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rt2 = p; }
		
#line 383 "gen/ragel/submatch_01__http_simple.c"

		goto _st4;
		_st4:
		p+= 1;
		st_case_4:
		if ( p == pe )
			goto _out4;
		if ( ( (*( p))) == 72 ) {
			goto _ctr13;
		}
		goto _st0;
		_ctr13:
			{
#line 39 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			v3 = p; }
		
#line 399 "gen/ragel/submatch_01__http_simple.c"

		goto _st5;
		_st5:
		p+= 1;
		st_case_5:
		if ( p == pe )
			goto _out5;
		if ( ( (*( p))) == 84 ) {
			goto _st6;
		}
		goto _st0;
		_st6:
		p+= 1;
		st_case_6:
		if ( p == pe )
			goto _out6;
		if ( ( (*( p))) == 84 ) {
			goto _st7;
		}
		goto _st0;
		_st7:
		p+= 1;
		st_case_7:
		if ( p == pe )
			goto _out7;
		if ( ( (*( p))) == 80 ) {
			goto _st8;
		}
		goto _st0;
		_st8:
		p+= 1;
		st_case_8:
		if ( p == pe )
			goto _out8;
		if ( ( (*( p))) == 47 ) {
			goto _st9;
		}
		goto _st0;
		_st9:
		p+= 1;
		st_case_9:
		if ( p == pe )
			goto _out9;
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto _st10;
		}
		goto _st0;
		_st10:
		p+= 1;
		st_case_10:
		if ( p == pe )
			goto _out10;
		if ( ( (*( p))) == 46 ) {
			goto _st11;
		}
		goto _st0;
		_st11:
		p+= 1;
		st_case_11:
		if ( p == pe )
			goto _out11;
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto _st12;
		}
		goto _st0;
		_st12:
		p+= 1;
		st_case_12:
		if ( p == pe )
			goto _out12;
		if ( ( (*( p))) == 10 ) {
			goto _ctr22;
		}
		goto _st0;
		_ctr22:
			{
#line 39 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			v4 = p; }
		
#line 478 "gen/ragel/submatch_01__http_simple.c"

		goto _st13;
		_ctr68:
			{
#line 47 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rp1 = p; }
		
#line 485 "gen/ragel/submatch_01__http_simple.c"

			{
#line 47 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rp2 = p; }
		
#line 490 "gen/ragel/submatch_01__http_simple.c"

		goto _st13;
		_ctr70:
			{
#line 47 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rp2 = p; }
		
#line 497 "gen/ragel/submatch_01__http_simple.c"

		goto _st13;
		_st13:
		p+= 1;
		st_case_13:
		if ( p == pe )
			goto _out13;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr24;
			}
			case 33: {
				goto _ctr25;
			}
			case 124: {
				goto _ctr25;
			}
			case 126: {
				goto _ctr25;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _ctr25;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _ctr25;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _ctr25;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _ctr25;
				}
			} else {
				goto _ctr25;
			}
		} else {
			goto _ctr25;
		}
		goto _st0;
		_ctr25:
			{
#line 53 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			
			if (s2) {
				OUT("version: ", v1, v2);
				OUT("status: ", s1, s2);
				OUT("reason: ", rp1, rp2);
			}
			if (m2) {
				OUT("method: ", m1, m2);
				OUT("request: ", rt1, rt2);
				OUT("version: ", v3, v4);
			}
		}
		
#line 558 "gen/ragel/submatch_01__http_simple.c"

			{
#line 25 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			h1 = p; }
		
#line 563 "gen/ragel/submatch_01__http_simple.c"

		goto _st14;
		_ctr40:
			{
#line 25 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			h1 = p; }
		
#line 570 "gen/ragel/submatch_01__http_simple.c"

		goto _st14;
		_st14:
		p+= 1;
		st_case_14:
		if ( p == pe )
			goto _out14;
		switch( ( (*( p))) ) {
			case 33: {
				goto _st14;
			}
			case 58: {
				goto _st15;
			}
			case 124: {
				goto _st14;
			}
			case 126: {
				goto _st14;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _st14;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _st14;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _st14;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st14;
				}
			} else {
				goto _st14;
			}
		} else {
			goto _st14;
		}
		goto _st0;
		_ctr29:
			{
#line 27 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			h2 = p; }
		
#line 620 "gen/ragel/submatch_01__http_simple.c"

		goto _st15;
		_st15:
		p+= 1;
		st_case_15:
		if ( p == pe )
			goto _out15;
		switch( ( (*( p))) ) {
			case 9: {
				goto _ctr29;
			}
			case 10: {
				goto _ctr30;
			}
			case 32: {
				goto _ctr29;
			}
			case 127: {
				goto _st0;
			}
		}
		if ( 0 <= ( (*( p))) && ( (*( p))) <= 31 ) {
			goto _st0;
		}
		goto _st16;
		_ctr32:
			{
#line 27 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			h2 = p; }
		
#line 650 "gen/ragel/submatch_01__http_simple.c"

		goto _st16;
		_st16:
		p+= 1;
		st_case_16:
		if ( p == pe )
			goto _out16;
		switch( ( (*( p))) ) {
			case 9: {
				goto _ctr31;
			}
			case 10: {
				goto _ctr30;
			}
			case 32: {
				goto _ctr32;
			}
			case 127: {
				goto _st0;
			}
		}
		if ( 0 <= ( (*( p))) && ( (*( p))) <= 31 ) {
			goto _st0;
		}
		goto _st16;
		_ctr31:
			{
#line 27 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			h2 = p; }
		
#line 680 "gen/ragel/submatch_01__http_simple.c"

		goto _st17;
		_st17:
		p+= 1;
		st_case_17:
		if ( p == pe )
			goto _out17;
		switch( ( (*( p))) ) {
			case 9: {
				goto _st17;
			}
			case 10: {
				goto _ctr35;
			}
			case 32: {
				goto _st16;
			}
			case 127: {
				goto _st0;
			}
		}
		if ( 0 <= ( (*( p))) && ( (*( p))) <= 31 ) {
			goto _st0;
		}
		goto _st18;
		_st18:
		p+= 1;
		st_case_18:
		if ( p == pe )
			goto _out18;
		switch( ( (*( p))) ) {
			case 9: {
				goto _ctr36;
			}
			case 10: {
				goto _ctr30;
			}
			case 32: {
				goto _ctr32;
			}
			case 127: {
				goto _st0;
			}
		}
		if ( 0 <= ( (*( p))) && ( (*( p))) <= 31 ) {
			goto _st0;
		}
		goto _st16;
		_ctr36:
			{
#line 27 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			h2 = p; }
		
#line 733 "gen/ragel/submatch_01__http_simple.c"

		goto _st19;
		_st19:
		p+= 1;
		st_case_19:
		if ( p == pe )
			goto _out19;
		switch( ( (*( p))) ) {
			case 9: {
				goto _st19;
			}
			case 10: {
				goto _ctr35;
			}
			case 32: {
				goto _st19;
			}
		}
		goto _st0;
		_ctr35:
			{
#line 66 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			
			if (h2) OUT("header: ", h1, h2);
			h1 = h2 = NULL;
		}
		
#line 760 "gen/ragel/submatch_01__http_simple.c"

		goto _st20;
		_st20:
		p+= 1;
		st_case_20:
		if ( p == pe )
			goto _out20;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr39;
			}
			case 33: {
				goto _ctr40;
			}
			case 124: {
				goto _ctr40;
			}
			case 126: {
				goto _ctr40;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _ctr40;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _ctr40;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _ctr40;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _ctr40;
				}
			} else {
				goto _ctr40;
			}
		} else {
			goto _ctr40;
		}
		goto _st0;
		_ctr30:
			{
#line 27 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			h2 = p; }
		
#line 810 "gen/ragel/submatch_01__http_simple.c"

			{
#line 66 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			
			if (h2) OUT("header: ", h1, h2);
			h1 = h2 = NULL;
		}
		
#line 818 "gen/ragel/submatch_01__http_simple.c"

		goto _st21;
		_st21:
		p+= 1;
		st_case_21:
		if ( p == pe )
			goto _out21;
		switch( ( (*( p))) ) {
			case 9: {
				goto _st15;
			}
			case 10: {
				goto _ctr39;
			}
			case 32: {
				goto _st15;
			}
			case 33: {
				goto _ctr40;
			}
			case 124: {
				goto _ctr40;
			}
			case 126: {
				goto _ctr40;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _ctr40;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _ctr40;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _ctr40;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _ctr40;
				}
			} else {
				goto _ctr40;
			}
		} else {
			goto _ctr40;
		}
		goto _st0;
		_st22:
		p+= 1;
		st_case_22:
		if ( p == pe )
			goto _out22;
		switch( ( (*( p))) ) {
			case 33: {
				goto _st23;
			}
			case 61: {
				goto _st23;
			}
			case 93: {
				goto _st23;
			}
			case 95: {
				goto _st23;
			}
			case 126: {
				goto _st23;
			}
		}
		if ( ( (*( p))) < 48 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 46 ) {
				goto _st23;
			}
		} else if ( ( (*( p))) > 59 ) {
			if ( ( (*( p))) > 91 ) {
				if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st23;
				}
			} else if ( ( (*( p))) >= 65 ) {
				goto _st23;
			}
		} else {
			goto _st23;
		}
		goto _st0;
		_ctr7:
			{
#line 38 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rt1 = p; }
		
#line 912 "gen/ragel/submatch_01__http_simple.c"

		goto _st23;
		_st23:
		p+= 1;
		st_case_23:
		if ( p == pe )
			goto _out23;
		switch( ( (*( p))) ) {
			case 32: {
				goto _ctr9;
			}
			case 33: {
				goto _st23;
			}
			case 61: {
				goto _st23;
			}
			case 93: {
				goto _st23;
			}
			case 95: {
				goto _st23;
			}
			case 126: {
				goto _st23;
			}
		}
		if ( ( (*( p))) < 48 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 46 ) {
				goto _st23;
			}
		} else if ( ( (*( p))) > 59 ) {
			if ( ( (*( p))) > 91 ) {
				if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st23;
				}
			} else if ( ( (*( p))) >= 65 ) {
				goto _st23;
			}
		} else {
			goto _st23;
		}
		goto _st0;
		_ctr5:
			{
#line 38 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rt1 = p; }
		
#line 960 "gen/ragel/submatch_01__http_simple.c"

		goto _st24;
		_st24:
		p+= 1;
		st_case_24:
		if ( p == pe )
			goto _out24;
		switch( ( (*( p))) ) {
			case 32: {
				goto _ctr9;
			}
			case 33: {
				goto _st3;
			}
			case 43: {
				goto _st24;
			}
			case 58: {
				goto _st25;
			}
			case 59: {
				goto _st3;
			}
			case 61: {
				goto _st3;
			}
			case 64: {
				goto _st22;
			}
			case 91: {
				goto _st23;
			}
			case 93: {
				goto _st23;
			}
			case 95: {
				goto _st3;
			}
			case 126: {
				goto _st3;
			}
		}
		if ( ( (*( p))) < 48 ) {
			if ( ( (*( p))) > 44 ) {
				if ( ( (*( p))) <= 46 ) {
					goto _st24;
				}
			} else if ( ( (*( p))) >= 36 ) {
				goto _st3;
			}
		} else if ( ( (*( p))) > 57 ) {
			if ( ( (*( p))) > 90 ) {
				if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st24;
				}
			} else if ( ( (*( p))) >= 65 ) {
				goto _st24;
			}
		} else {
			goto _st24;
		}
		goto _st0;
		_st25:
		p+= 1;
		st_case_25:
		if ( p == pe )
			goto _out25;
		switch( ( (*( p))) ) {
			case 32: {
				goto _ctr9;
			}
			case 33: {
				goto _st26;
			}
			case 47: {
				goto _st29;
			}
			case 61: {
				goto _st26;
			}
			case 63: {
				goto _st27;
			}
			case 64: {
				goto _st28;
			}
			case 91: {
				goto _st23;
			}
			case 93: {
				goto _st23;
			}
			case 95: {
				goto _st26;
			}
			case 126: {
				goto _st26;
			}
		}
		if ( ( (*( p))) < 65 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 59 ) {
				goto _st26;
			}
		} else if ( ( (*( p))) > 90 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
				goto _st26;
			}
		} else {
			goto _st26;
		}
		goto _st0;
		_st26:
		p+= 1;
		st_case_26:
		if ( p == pe )
			goto _out26;
		switch( ( (*( p))) ) {
			case 32: {
				goto _ctr9;
			}
			case 33: {
				goto _st26;
			}
			case 47: {
				goto _st27;
			}
			case 61: {
				goto _st26;
			}
			case 63: {
				goto _st27;
			}
			case 64: {
				goto _st28;
			}
			case 91: {
				goto _st23;
			}
			case 93: {
				goto _st23;
			}
			case 95: {
				goto _st26;
			}
			case 126: {
				goto _st26;
			}
		}
		if ( ( (*( p))) < 65 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 59 ) {
				goto _st26;
			}
		} else if ( ( (*( p))) > 90 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
				goto _st26;
			}
		} else {
			goto _st26;
		}
		goto _st0;
		_ctr6:
			{
#line 38 "../../../benchmarks/c/src/ragel/submatch_01__http_simple.rl"
			rt1 = p; }
		
#line 1125 "gen/ragel/submatch_01__http_simple.c"
